samples/_failures_safe/1761207748_5c4712_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9dc5cc3f.c: In function ‘main’:
./samples/SAFE/__tmp_9dc5cc3f.c:183:9: error: expected expression at end of input
  183 |         if (k >=
      |         ^~
./samples/SAFE/__tmp_9dc5cc3f.c:183:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9dc5cc3f.c:183:9: error: expected declaration or statement at end of input
